pnp-ids: Fix possible free of static string on non-udev platforms

gnome_pnp_ids_get_pnp_id() should always return a dynamically allocated
string as its API.

https://bugzilla.gnome.org/show_bug.cgi?id=770686